fix app store link alignment on each app product page.

--- a/project.css
+++ b/project.css
@@ -25,6 +25,7 @@
     grid-area: title;
     text-align: center;
     position: initial;
+    text-decoration: none;
 }
 
 .project-link {
